--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,46 +295,89 @@ jobs:
       - run:
           name: terraform destroy
           command: |
-            export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID_non_prod}"
-            export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY_non_prod}"
-            export CIRCLE_BRANCH="<< pipeline.parameters.GHA_Meta >>"
-            export SANITISED_CIRCLE_BRANCH=$(echo ${CIRCLE_BRANCH:0:30} | tr -c "[:alnum:]\n" "-" | tr "[:upper:]" "[:lower:]")
-            # --- Safeguard to never destroy main ---
-            if [ "$SANITISED_CIRCLE_BRANCH" = "main" ]; then
-              echo "Skipping destroy for main branch"
-              exit 0
-            fi
-            # --- Select workspace ---
-            cd terraform/pipeline
-            terraform init -input=false -backend-config=../non_prod.s3.tfbackend
-            terraform workspace select ${SANITISED_CIRCLE_BRANCH}
-            # --- Force-empty dataset bucket for this branch ---
-            echo "Emptying dataset bucket: s3://sfc-${SANITISED_CIRCLE_BRANCH}-datasets"
-            NB_OBJECTS=$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --query='length(Versions[*] || `[]` )' | awk '{ print $1 }')
-            echo "      '${NB_OBJECTS}' objects to remove"
-            if [[ "$NB_OBJECTS" != "0" ]]; then
-              start=$SECONDS
-              while [[ $NB_OBJECTS -gt 0 ]]
-              do
-                aws s3api delete-objects --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --delete "$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --max-items 100 --query='{Objects: Versions[0:100].{Key:Key,VersionId:VersionId}}')" --query 'length(Deleted[*] || `[]` )' > /dev/null
-                NB_OBJECTS=$((NB_OBJECTS  > 100 ? NB_OBJECTS - 100 : 0))
-                echo "      Removed batch of Objects... Remaining : $NB_OBJECTS ($(( SECONDS - start ))s)"
-              done
-            fi
+            BRANCH_LIST = (
+            "1004-lock-down-production-infr"
+            "1004-move-circleci-dev-workflow-to-new-account"
+            "1004-waroudn-b-trunc"
+            "1004-workaround-branch-truncation-issue"
+            "1020-sf-loop"
+            "1031-fix-dup-locs"
+            "1031-fix-dup-locsv2"
+            "1038-grant-cross-accoutn-acces"
+            "1060-snapdate-bug"
+            "1070-error-test"
+            "1070-multi-run-dim-creation"
+            "1070-overwrite-dim"
+            "1075-missing-pc"
+            "1077-pcd-review"
+            "1079-update-ref"
+            "1085-dupe-partitions"
+            "1109-prep-wrkr-data"
+            "1125-add-rel-loc"
+            "1130-sfcinternal-ref"
+            "1133-valid-loc-4"
+            "1153-impt-hist-rela"
+            "1172-prim-serv-sec"
+            "1184-ingest-all-cqc"
+            "1191-adass-monthly"
+            "1223-retrain-nr-dorm"
+            "1239-model-sf"
+            "1240-run-number"
+            "1243-destroy-v4"
+            "1243-destroy-v6"
+            "1243-destroy-v7"
+            "1243-detroy-v5"
+            "1256-delay-extrap-v2"
+            "1277-main-copy"
+            "1277-pl-01-merge"
+            "circleci-terraform-destroy"
+            "mh-test-ide"
+            "rm-pir-nov25"
+            )
 
-            NB_OBJECTS=$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --query='length(DeleteMarkers[*] || `[]` )' | awk '{ print $1 }')
-            echo "      '${NB_OBJECTS}' markers to remove"
-            if [[ "$NB_OBJECTS" != "0" ]]; then
-              start=$SECONDS
-              while [[ $NB_OBJECTS -gt 0 ]]
-              do
-                aws s3api delete-objects --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --delete "$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --max-items 100 --query='{Objects: DeleteMarkers[0:100].{Key:Key,VersionId:VersionId}}')" --query 'length(Deleted[*] || `[]` )' > /dev/null
-                NB_OBJECTS=$((NB_OBJECTS  > 100 ? NB_OBJECTS - 100 : 0))
-                echo "      Removed batch of Markers... Remaining : $NB_OBJECTS (took $(( SECONDS - start ))s)"
-              done
-            fi
-            # --- Run destroy ---
-            terraform destroy -auto-approve
+            for BRANCH in "${BRANCH_LIST[@]}"; do
+
+              export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID_non_prod}"
+              export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY_non_prod}"
+              export CIRCLE_BRANCH="$BRANCH"
+              export SANITISED_CIRCLE_BRANCH=$(echo ${CIRCLE_BRANCH:0:30} | tr -c "[:alnum:]\n" "-" | tr "[:upper:]" "[:lower:]")
+              # --- Safeguard to never destroy main ---
+              if [ "$SANITISED_CIRCLE_BRANCH" = "main" ]; then
+                echo "Skipping destroy for main branch"
+                exit 0
+              fi
+              # --- Select workspace ---
+              cd terraform/pipeline
+              terraform init -input=false -backend-config=../non_prod.s3.tfbackend
+              terraform workspace select ${SANITISED_CIRCLE_BRANCH}
+              # --- Force-empty dataset bucket for this branch ---
+              echo "Emptying dataset bucket: s3://sfc-${SANITISED_CIRCLE_BRANCH}-datasets"
+              NB_OBJECTS=$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --query='length(Versions[*] || `[]` )' | awk '{ print $1 }')
+              echo "      '${NB_OBJECTS}' objects to remove"
+              if [[ "$NB_OBJECTS" != "0" ]]; then
+                start=$SECONDS
+                while [[ $NB_OBJECTS -gt 0 ]]
+                do
+                  aws s3api delete-objects --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --delete "$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --max-items 100 --query='{Objects: Versions[0:100].{Key:Key,VersionId:VersionId}}')" --query 'length(Deleted[*] || `[]` )' > /dev/null
+                  NB_OBJECTS=$((NB_OBJECTS  > 100 ? NB_OBJECTS - 100 : 0))
+                  echo "      Removed batch of Objects... Remaining : $NB_OBJECTS ($(( SECONDS - start ))s)"
+                done
+              fi
+
+              NB_OBJECTS=$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --query='length(DeleteMarkers[*] || `[]` )' | awk '{ print $1 }')
+              echo "      '${NB_OBJECTS}' markers to remove"
+              if [[ "$NB_OBJECTS" != "0" ]]; then
+                start=$SECONDS
+                while [[ $NB_OBJECTS -gt 0 ]]
+                do
+                  aws s3api delete-objects --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --delete "$(aws s3api list-object-versions --bucket "sfc-${SANITISED_CIRCLE_BRANCH}-datasets" --max-items 100 --query='{Objects: DeleteMarkers[0:100].{Key:Key,VersionId:VersionId}}')" --query 'length(Deleted[*] || `[]` )' > /dev/null
+                  NB_OBJECTS=$((NB_OBJECTS  > 100 ? NB_OBJECTS - 100 : 0))
+                  echo "      Removed batch of Markers... Remaining : $NB_OBJECTS (took $(( SECONDS - start ))s)"
+                done
+              fi
+              # --- Run destroy ---
+              terraform destroy -auto-approve
+            done
       - run:
           name: delete workspace
           command: |
